# DataAnalizer

./: .gitignore  CMakeLists.txt  Readme.md
doc/: ChatGPT.txt
src/: main.cpp
